# tinySoftRender

./: CMakeLists.txt  README.md  geometry.h  main.cpp  model.cpp  model.h  our_gl.cpp  our_gl.h
